# calendar

./: .gitignore  .travis.yml  README.md  pyproject.toml
calendarapp/: pytest.ini
calendarapp/accounts/: admin.py  managers.py  middleware.py  models.py
calendarapp/accounts/migrations/: 0001_initial.py  0002_auto_20201116_1423.py  0003_auto_20201116_2135.py  0004_auto_20201117_0812.py  0005_auto_20201117_0818.py  0006_auto_20201117_0819.py  0007_auto_20201117_1616.py  0008_auto_20201117_2234.py  0009_user_uuid.py  0010_auto_20201120_1002.py  0011_auto_20201120_1002.py
calendarapp/core/: asgi.py  settings.py  urls.py  wsgi.py
calendarapp/events/: admin.py  apiviews.py  models.py  serializers.py  tests.py  urls.py
calendarapp/events/migrations/: 0001_initial.py  0002_auto_20201116_1655.py  0003_auto_20201116_2135.py  0004_auto_20201117_2318.py
calendarapp/locations/: admin.py  apiviews.py  models.py  serializers.py  urls.py
calendarapp/locations/migrations/: 0001_initial.py  0002_auto_20201116_1504.py  0003_auto_20201117_2234.py
